--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ tasks.withType(JavaCompile) {
 }
 dependencies {
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.27.0'
+    //Фреймворк
     implementation group: 'org.testng', name: 'testng', version: '7.10.2'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.9'
     testImplementation 'io.qameta.allure:allure-testng:2.22.0'
@@ -25,14 +26,24 @@ dependencies {
     implementation group: 'io.cucumber', name: 'cucumber-java', version: '7.18.1'
     implementation group: 'io.cucumber', name: 'cucumber-junit', version: '7.18.1'
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.9.2'
-    // implementation 'org.slf4j:slf4j-nop:2.0.7'
 
+    // Новые зависимости
+    compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+    testCompileOnly 'org.projectlombok:lombok:1.18.34'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
+    //Для работы с REST API
+    implementation group: 'org.apache.httpcomponents', name: 'fluent-hc', version: '4.5.14'
+    //Парсит JSON  в Java обьекты и обратно
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
+}
+    // implementation 'org.slf4j:slf4j-nop:2.0.7'
     //compileOnly 'org.projectlombok:lombok:1.18.34'
     //annotationProcessor 'org.projectlombok:lombok:1.18.34'
     //testCompileOnly 'org.projectlombok:lombok:1.18.34'
     //testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
 
-}
 
 test {
     useTestNG() {
